# claudecraft

./: .gitignore  CLAUDE.md  PLACEHOLDERS.md  README.md  bootstrap-claudecraft.sh  bootstrap-specflow.sh  claude-code-setup.md  issues.md  pyproject.toml
.claude/agents/: architect.md  claudecraft-architect.md  claudecraft-coder.md  coder.md  qa.md  reviewer.md  specflow-coder.md  specflow-qa.md  specflow-reviewer.md  specflow-tester.md
.claude/commands/: claudecraft.implement.md  claudecraft.ingest.md  claudecraft.init.md  claudecraft.prd.md  claudecraft.qa.md  claudecraft.tasks.md  specflow.brd.md  specflow.implement.md  specflow.ingest.md  specflow.specify.md  specflow.tasks.md
.claude/hooks/: hooks.json
.claude/hooks/scripts/: stop-check.py
.claude/skills/specflow/: SKILL.md
.specify/memory/: constitution.md
docs/: RALPH_RESEARCH.md  RALPH_SPEC.md  testing-flat-file-store.md
docs/plans/: 2026-03-01-cli-e2e-tests-design.md  2026-03-01-cli-e2e-tests.md
specs/001-flat-file-store/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-flat-file-store/checklists/: requirements.md
specs/002-agent-execution-parity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-agent-execution-parity/checklists/: requirements.md
specs/002-agent-execution-parity/contracts/: agent-template-sections.md
specs/003-auto-docs-on-completion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-auto-docs-on-completion/checklists/: requirements.md
specs/003-auto-docs-on-completion/contracts/: execution-summary-schema.md
specs/specflow/: spec.md
specs/task-swimlanes/: plan.md  spec.md
src/claudecraft/: __init__.py  cli.py
src/claudecraft/core/: __init__.py  config.py  database.py  models.py  project.py  store.py  sync.py
src/claudecraft/ingestion/: __init__.py  ingest.py  validator.py
src/claudecraft/memory/: __init__.py
src/claudecraft/orchestration/: __init__.py  agent_pool.py  execution.py  merge.py  ralph.py  worktree.py
src/claudecraft/speckit/: __init__.py  wrapper.py
src/claudecraft/templates/agents/: claudecraft-architect.md  claudecraft-coder.md  claudecraft-qa.md  claudecraft-quick-architect.md  claudecraft-reviewer.md  claudecraft-tester.md  docs-generator.md
src/claudecraft/templates/commands/: claudecraft.brd.md  claudecraft.constitution.md  claudecraft.implement.md  claudecraft.ingest.md  claudecraft.init.md  claudecraft.plan.md  (+5 more)
src/claudecraft/tui/: __init__.py  app.py
src/specflow/: __init__.py  cli.py
src/specflow/core/: __init__.py  config.py  database.py  project.py  sync.py
src/specflow/memory/: __init__.py  store.py
src/specflow/orchestration/: __init__.py  agent_pool.py  execution.py  merge.py  ralph.py  worktree.py
src/specflow/tui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_agent_pool.py  test_cli.py  test_cli_e2e.py  test_config.py  test_database.py  test_execution.py  test_ingestion.py  test_memory_store.py  test_merge.py  test_migration.py  test_models.py  test_project.py  test_ralph.py  test_speckit.py  test_store.py  test_store_concurrency.py  test_sync.py  test_templates.py  test_tui.py  test_validator.py  test_worktree.py
(+28 files in other folders)
